--- a/vite-app/src/App.css
+++ b/vite-app/src/App.css
@@ -4,9 +4,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&family=Creepster&family=Henny+Penny&family=Montserrat:wght@300&family=Nanum+Myeongjo:wght@700&family=Poppins:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&family=Comme:wght@100&family=Creepster&family=Henny+Penny&family=Montserrat:wght@300&family=Nanum+Myeongjo:wght@700&family=Poppins:wght@300&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Comme:wght@100&family=Creepster&family=Henny+Penny&family=Montserrat:wght@300&family=Nanum+Myeongjo:wght@700&family=Poppins:wght@300&display=swap");
 :root {
   --nav-font-family: "Cardo", serif;
-  --navcursiv-family: "Henny Penny", cursive;
+  --navcursiv-family: "Cardo", serif;
   --headline-font-family: "Montserrat", sans-serif;
   --subheadline-font-family: "Poppins", sans-serif;
 
