--- a/vite-app/src/components/Columns/CV.css
+++ b/vite-app/src/components/Columns/CV.css
@@ -1,3 +1,14 @@
 span {
   text-decoration: none;
 }
+.header {
+  font-weight: bold;
+  font-size: 25px;
+  font-family: var(--nav-font-family);
+  letter-spacing: 2px;
+}
+.subheader {
+  font-size: 20px;
+  font-family: var(--nav-font-family);
+  letter-spacing: 2px;
+}
