--- a/vite-app/src/components/Contact/Contact.css
+++ b/vite-app/src/components/Contact/Contact.css
@@ -13,10 +13,28 @@
 .emailaddress {
   text-align: center;
   margin: 50px 0px 0px 0px;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .contact-icon {
   max-width: 80px;
   display: inline;
+}
+.contact-link {
+  text-decoration: none;
+  display: block;
+  margin: 0px auto;
+  font-size: 20px;
+}
+
+@media (max-width: 992px) {
+  .contact-link {
+    font-size: 8px;
+  }
+  .contactViaMail {
+    padding: 10px 30px;
+  }
+  .emailaddress {
+    font-size: 20px;
+  }
 }
