--- a/vite-app/src/components/Headline.css
+++ b/vite-app/src/components/Headline.css
@@ -1,6 +1,15 @@
-h2 {
+.headline {
   font-family: var(--headline-font-family);
   font-style: italic;
   font-weight: bold;
   margin-top: 40px;
+  font-size: 60px;
+  margin-top: 100px;
+}
+
+@media (max-width: 992px) {
+  .headline {
+    font-size: 35px;
+    margin-top: 0px;
+  }
 }
