--- a/vite-app/src/components/Home/Home.css
+++ b/vite-app/src/components/Home/Home.css
@@ -23,7 +23,41 @@ p {
   text-align: right;
   margin-right: 100px;
 }
+.latest-projects {
+  font-weight: lighter;
+  margin-top: 50px;
+}
+.contact-link {
+  text-decoration: none;
+  display: block;
+  margin: 0px auto;
+  font-size: 20px;
+}
+.projects-link {
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
 .projectimages img {
   width: 350px;
   height: 350px;
+}
+
+@media (max-width: 992px) {
+  button {
+    padding: 10px 30px;
+  }
+  .projectimages img {
+    width: 250px;
+    height: 250px;
+  }
+  .contact-link {
+    font-size: 8px;
+  }
+  .latest-projects {
+    font-size: 16px;
+  }
+  .projects-link {
+    font-size: 12px;
+  }
 }
