--- a/vite-app/src/components/Columns/Modal.css
+++ b/vite-app/src/components/Columns/Modal.css
@@ -23,7 +23,28 @@
 
 .job-details,
 .learning-experience,
-.education-details {
+.education-details .education-experience {
   text-align: left;
   font-size: 20px;
+}
+
+@media (max-width: 992px) {
+  .job-details,
+  .learning-experience,
+  .education-details,
+  .education-experience {
+    font-size: 12px;
+    text-align: left;
+  }
+
+  .mymodal {
+    width: 300px;
+    height: 200px;
+    display: flex;
+    left: 0%;
+    top: 50%;
+  }
+  .close-button {
+    font-size: 35px;
+  }
 }
