--- a/vite-app/src/components/Columns/CV.css
+++ b/vite-app/src/components/Columns/CV.css
@@ -16,7 +16,10 @@ span {
 
 @media (max-width: 992px) {
   .header {
-    font-size: 14px;
+    font-size: 12px;
+  }
+  .text-center {
+    font-size: 8px;
   }
   .subheader {
     font-size: 10px;
