--- a/vite-app/src/components/Columns/CV.css
+++ b/vite-app/src/components/Columns/CV.css
@@ -14,6 +14,9 @@ span {
   letter-spacing: 2px;
 }
 
+.leaf {
+  cursor: pointer;
+}
 @media (max-width: 992px) {
   .header {
     font-size: 12px;
@@ -27,6 +30,7 @@ span {
   .leaf {
     width: 30px;
   }
+
   .cvheader-picture {
     width: 100px;
   }
