--- a/vite-app/src/components/Skills/Skills.css
+++ b/vite-app/src/components/Skills/Skills.css
@@ -1,6 +1,3 @@
-.skillicon {
-  width: 65px;
-}
 .tree {
   width: 400px;
   margin: 0px;
@@ -47,7 +44,7 @@ div {
     width: 200px;
   }
   .skillicon {
-    width: 40px;
+    width: 40px !important;
   }
   .shecodescertificate {
     display: inline;
